apps/core/kubernetes/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubernetes
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "100"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kubernetes.bhamm-lab.com`)
      middlewares:
        - name: lan-ips
        - name: default-headers
      services:
        - name: kubernetes-dashboard-kong-proxy
          port: 443
  tls:
    secretName: bhamm-lab-tls
